# whisper-input

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  ORGANIZATION_GAPS.md  README.md  architecture.md  current-task.md  dictation.toml  flake.nix  implementation-checklist.md  pyproject.toml  whisper-input.cabal
.githooks/: pre-commit
app/: Main.hs
dictation_app/: __init__.py  __main__.py  _types.py  button_listener.py  config.py  injector.py  main.py  orchestrator.py  recorder.py  transcriber.py  transcriber_deepgram.py
src/WhisperInput/: CLI.hs  Commands.hs  Daemon.hs  DaemonRunner.hs  IPC.hs  PidFile.hs  Protocol.hs  Server.hs  SocketPath.hs  Transport.hs
test/: PoorlyFormatted.hs  UnlintedCode.hs  WellFormatted.hs  WithHLintIssues.hs
tests/: __init__.py  test_button_listener.py  test_config.py  test_injector.py  test_main.py  test_orchestrator.py  test_orchestrator_edge_cases.py  test_recorder.py  test_recorder_resilience.py  test_transcriber.py  test_transcriber_robustness.py
