cabal-version:   3.0
name:            whisper-input
version:         0.1.0.0
synopsis:        A wrapper around the OpenAI Whisper model for dictation
description:     Allows the user to use the Whisper model to input text into any
                 focused window. Currently compatibility is only planned for
                 Wayland with ydotool.
author:          Abhigya Maskay
maintainer:      ave70011@gmail.com
category:        Application
homepage:        https://github.com/abhigya-maskay/whisper-input
license:         MIT
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  WhisperInput.SocketPath
                    , WhisperInput.CLI
                    , WhisperInput.Commands
                    , WhisperInput.IPC
    other-modules:    Paths_whisper_input
    default-extensions: OverloadedStrings
                      , LambdaCase
    build-depends:    base ^>=4.21.0.0
                    , bytestring
                    , directory
                    , filepath
                    , network >= 3.1
                    , text
                    , unix
                    , optparse-applicative
    hs-source-dirs:   src
    default-language: Haskell2010
    autogen-modules:  Paths_whisper_input

executable whisper-input
    import:           warnings
    main-is:          Main.hs
    default-extensions: OverloadedStrings
    build-depends:    base ^>=4.21.0.0
                    , whisper-input
    hs-source-dirs:   app
    default-language: Haskell2010
